# Selenia-Web-Server-SWS-

./: .dockerignore  Cargo.toml  Dockerfile  bench  config.txt  config.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
deploy/helm/sws/: Chart.yaml  values.yaml
deploy/helm/sws/templates/: deployment.yaml  service.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hpack_decoder.rs  http_parser.rs  quic_state_machine.rs
libc/: Cargo.toml
libc/src/: lib.rs
scripts/: build_static.sh  gen_docs.sh
selenia_core/: Cargo.toml
selenia_core/src/: capability.rs  config.rs  dns.rs  ebpf.rs  lib.rs  live_patch.rs  locale.rs  logger.rs  metrics.rs  otel.rs  plugin.rs  ratelimit.rs  seccomp.rs  signals.rs  traceparent.rs  waf.rs  wasm.rs
selenia_core/src/crypto/: aead.rs  aes.rs  aes_gcm.rs  chacha20.rs  hkdf.rs  hmac.rs  memfd_secret.rs  mod.rs  ocsp.rs  poly1305.rs  rand.rs  sha256.rs  tls.rs  tls13.rs
selenia_core/src/os/: epoll.rs  event_loop.rs  event_loop_iocp.rs  event_loop_kqueue.rs  event_loop_mt.rs  event_loop_stub.rs  interest.rs  iocp.rs  kqueue.rs  mod.rs  poller.rs  timer.rs
selenia_http/: Cargo.toml
selenia_http/src/: accept.rs  compress.rs  error.rs  hpack.rs  http2.rs  http3.rs  http3_packet.rs  keepalive.rs  lib.rs  parser.rs  qpack.rs  rbac.rs  router.rs  zerocopy.rs
selenia_server/: Cargo.toml
selenia_server/src/: main.rs
spec/: DESIGN.md  SPECIFICATION.md  task.md
tools/: bench.rs  bench_scenarios.rs
www/: index.html
