[workspace]
resolver = "2"
members = [
    "selenia_core",
    "selenia_http",
    "selenia_server",
]

# Moved standalone benchmarking binaries into dedicated crate `tools/`.
# Having `[[bin]]` sections in a virtual manifest is disallowed as of Cargo 1.74,
# therefore we remove them here.  The binaries are now defined by local manifests
# under `tools/` and picked up automatically by the workspace. 